# sound-collection

./: .clang-format  .gitignore  Makefile.am  configure.ac
src/: GRefPtr.cpp  GRefPtr.h  application.cc  application.h  equipment-resource.c  equipment-resource.h  header-label.cc  header-label.h  identification-resource.c  identification-resource.h  import-dialog.cc  import-dialog.h  location-form.cc  location-form.h  location-list.cc  location-list.h  location-resource.c  location-resource.h  location-tree-model.cc  location-tree-model.h  location-tree-view.cc  location-tree-view.h  location-window.cc  location-window.h  location.cc  location.h  main-window.cc  main-window.h  main.cc  quality-widget.cc  quality-widget.h  recording-form.cc  recording-form.h  recording-list-box.cc  recording-list-box.h  recording-list-row.cc  recording-list-row.h  recording-list.cc  recording-list.h  recording-resource.c  (+26 more)
test/: test-audio-player.cc  test-location-window.cc  test-recording-window.cc
